+ Schedule functionality, formatting
